# multivarious

./: LICENSE  MANIFEST.in  README.md  Untitled.ipynb  abcd_dim.py  abcddim.py  ode_test.py  ppath  ppath.sh  pyproject.toml  setup.py  update_version.sh
doc/: package_install_notes
dsp/: blank_file
examples/: L1_fit_example.py  L1_fit_example.py~  L1_fit_test.py  LP_opt.py  LP_opt_example.py  MCS_example.py  decorrelate_example.py  fix_R_example.py  l1_example.py  lers_2d_example.py  lm_examples.py  mimoSHORSA_example.py  mimoSHORSA_test.py  mimo_rs_example.py  mimo_rs_test.py  mimo_srs_example.py  mimo_srs_test.py  ode_example.py  ode_fctn.py  ode_test.py  odef.py  opt_example.py  opt_example.py~  plot_CDF_ci_demo.py  plot_CDF_ci_example.py  plot_ECDF_ci_example.py  plot_opt_surface_example.py  poly_fit_example.py  polynomial_example.py  rvs_example.py  save-as.env  save_as.env  verify_path_import.py
lti/: blk_hankel.py  blk_toeplitz.py  con2dis.py  damp.py  dis2con.py  dlsym.py  liap.py  lsym.py  mimoBode.py  mimoFRF.py  sys_zero.py  syszero.py
multivarious/: __init__.py
multivarious.egg-info/: PKG-INFO  SOURCES.txt
ode/: ode4u.py
opt/: L1_fit.py  L1_fit_test.py  L1_plots.py  LP_anlaysis.py  avg_cov_func.py  fsolve.py  mimoSHORSA.py  mimoSHORSA_example.py  mimoSHORSA_test.py  nms.py  opt_example.py  opt_options.py  ors.py  ors_opt.py  plot_cvg_hst.py  plot_opt_surface.py  poly_fit.py  poly_fit_test.py  sqp.py
rvs/: GEV.py  beta.py  chi2.py  exponential.py  extreme_value_I.py  gamma.py  gev.py  laplace.py  lognormal.py  normal.py  plot_CDF_ci.py  plot_CDF_ci_demo.py  poisson.py  quantile_ci.py  rayleigh.py  students_t.py  triangular.py  (+1 more)
(+240 files in other folders)
